[gd_scene load_steps=8 format=3 uid="uid://dw3by6pgyitx6"]

[ext_resource type="Script" path="res://assets/menu/menu.gd" id="1_4wrla"]
[ext_resource type="Theme" uid="uid://ejuwnpkem3ex" path="res://assets/touch_theme.tres" id="2_gx5fp"]
[ext_resource type="PackedScene" uid="uid://ywh548qght10" path="res://assets/menu/create_page.tscn" id="3_jti5y"]
[ext_resource type="Resource" uid="uid://sncmuupkqlfm" path="res://assets/objects/props/props_library.tres" id="4_xh3d5"]
[ext_resource type="Resource" uid="uid://ctbjosviisir5" path="res://assets/objects/sounds/sounds_library.tres" id="5_2sm6x"]
[ext_resource type="Resource" uid="uid://b7vhlw7hobfsp" path="res://assets/objects/plants/plants_library.tres" id="5_3od4f"]
[ext_resource type="Resource" uid="uid://dmeeh3dlhwlcv" path="res://assets/objects/pets/pets_library.tres" id="7_c4v7g"]

[node name="Menu" type="Control"]
custom_minimum_size = Vector2(500, 400)
layout_mode = 3
anchors_preset = 0
offset_right = 500.0
offset_bottom = 400.0
theme = ExtResource("2_gx5fp")
script = ExtResource("1_4wrla")

[node name="TabContainer" type="TabContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
current_tab = 0

[node name="Options" type="MarginContainer" parent="TabContainer"]
layout_mode = 2
metadata/_tab_index = 0

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Options"]
layout_mode = 2

[node name="ShowAudio" type="Button" parent="TabContainer/Options/VBoxContainer"]
custom_minimum_size = Vector2(299, 0)
layout_mode = 2
size_flags_horizontal = 4
toggle_mode = true
button_pressed = true
text = "Show Audio"

[node name="DeleteOnTouch" type="Button" parent="TabContainer/Options/VBoxContainer"]
custom_minimum_size = Vector2(299, 0)
layout_mode = 2
size_flags_horizontal = 4
toggle_mode = true
text = "Delete on Touch"

[node name="Control" type="Control" parent="TabContainer/Options/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="HSeparator" type="HSeparator" parent="TabContainer/Options/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="TabContainer/Options/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="SaveButton" type="Button" parent="TabContainer/Options/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
text = "Save"

[node name="Control" type="Control" parent="TabContainer/Options/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2

[node name="QuitButton" type="Button" parent="TabContainer/Options/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
text = "Quit"

[node name="Props" parent="TabContainer" instance=ExtResource("3_jti5y")]
visible = false
layout_mode = 2
library = ExtResource("4_xh3d5")

[node name="Plants" parent="TabContainer" instance=ExtResource("3_jti5y")]
visible = false
layout_mode = 2
library = ExtResource("5_3od4f")
metadata/_tab_index = 2

[node name="Sounds" parent="TabContainer" instance=ExtResource("3_jti5y")]
visible = false
layout_mode = 2
library = ExtResource("5_2sm6x")
metadata/_tab_index = 3

[node name="Pets" parent="TabContainer" instance=ExtResource("3_jti5y")]
visible = false
layout_mode = 2
library = ExtResource("7_c4v7g")
metadata/_tab_index = 4

[connection signal="toggled" from="TabContainer/Options/VBoxContainer/ShowAudio" to="." method="_on_show_audio_toggled"]
[connection signal="toggled" from="TabContainer/Options/VBoxContainer/DeleteOnTouch" to="." method="_on_delete_on_touch_toggled"]
[connection signal="pressed" from="TabContainer/Options/VBoxContainer/HBoxContainer/SaveButton" to="." method="_on_save_button_pressed"]
[connection signal="pressed" from="TabContainer/Options/VBoxContainer/HBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
